[gd_scene load_steps=7 format=3 uid="uid://by8hbg7uog3m0"]

[ext_resource type="Script" path="res://scenes/create_chart.gd" id="1_btqso"]
[ext_resource type="Theme" uid="uid://bebg8dyoq0am0" path="res://chart_editor.tres" id="2_a5udf"]
[ext_resource type="Texture2D" uid="uid://c1mgxe0dqdbgh" path="res://assets/sprites/ui/icons/pause_button.png" id="3_7dle2"]
[ext_resource type="Texture2D" uid="uid://byl3boevtc02p" path="res://assets/sprites/ui/icons/play_button.png" id="4_4kygd"]
[ext_resource type="Texture2D" uid="uid://ctpvxy1q8bue1" path="res://assets/sprites/ui/background/menuDesat.png" id="5_p3k0j"]
[ext_resource type="FontFile" uid="uid://n7emp3kshbao" path="res://fonts/Bold Normal Text.ttf" id="6_qek5h"]

[node name="Create Chart" type="Node2D"]
script = ExtResource("1_btqso")

[node name="Music" type="Node" parent="."]

[node name="Vocals" type="AudioStreamPlayer" parent="Music"]
bus = &"Music"

[node name="Instrumental" type="AudioStreamPlayer" parent="Music"]
autoplay = true
bus = &"Music"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, 360)
metadata/_edit_lock_ = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="mp3 only Disclaimer" type="Label" parent="UI"]
offset_left = 32.0
offset_top = 160.0
offset_right = 544.0
offset_bottom = 192.0
theme = ExtResource("2_a5udf")
text = "Disclaimer: As of now, you can only import .mp3 s during runtime."
metadata/_edit_lock_ = true

[node name="Vocals Container" type="PanelContainer" parent="UI"]
anchors_preset = -1
anchor_right = 0.4
anchor_bottom = 0.089
offset_left = 31.0
offset_top = 200.0
offset_right = 31.0
offset_bottom = 183.92

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Vocals Container"]
layout_mode = 2
alignment = 1
metadata/_edit_lock_ = true

[node name="HFlowContainer" type="HFlowContainer" parent="UI/Vocals Container/VBoxContainer"]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="UI/Vocals Container/VBoxContainer/HFlowContainer"]
custom_minimum_size = Vector2(416, 0)
layout_mode = 2
theme = ExtResource("2_a5udf")
text = "Vocals: res://"
clip_text = true
text_overrun_behavior = 1
metadata/_edit_lock_ = true

[node name="Get File Button" type="Button" parent="UI/Vocals Container/VBoxContainer/HFlowContainer"]
layout_mode = 2
theme = ExtResource("2_a5udf")
text = "Select File"
metadata/_edit_lock_ = true

[node name="FileDialog" type="FileDialog" parent="UI/Vocals Container/VBoxContainer/HFlowContainer"]
title = "Open a File"
position = Vector2i(610, 221)
size = Vector2i(540, 400)
unresizable = true
always_on_top = true
min_size = Vector2i(320, 320)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2
root_subfolder = "res://"
filters = PackedStringArray("*.mp3")

[node name="Instrumental Container" type="PanelContainer" parent="UI"]
anchors_preset = -1
anchor_right = 0.4
anchor_bottom = 0.089
offset_left = 32.0
offset_top = 264.0
offset_right = 32.0
offset_bottom = 247.92

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Instrumental Container"]
layout_mode = 2
alignment = 1
metadata/_edit_lock_ = true

[node name="HFlowContainer" type="HFlowContainer" parent="UI/Instrumental Container/VBoxContainer"]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="UI/Instrumental Container/VBoxContainer/HFlowContainer"]
custom_minimum_size = Vector2(416, 0)
layout_mode = 2
theme = ExtResource("2_a5udf")
text = "Instrumental: res://"
clip_text = true
text_overrun_behavior = 1
metadata/_edit_lock_ = true

[node name="Get File Button" type="Button" parent="UI/Instrumental Container/VBoxContainer/HFlowContainer"]
layout_mode = 2
theme = ExtResource("2_a5udf")
text = "Select File"
metadata/_edit_lock_ = true

[node name="FileDialog" type="FileDialog" parent="UI/Instrumental Container/VBoxContainer/HFlowContainer"]
title = "Open a File"
position = Vector2i(610, 221)
size = Vector2i(540, 400)
unresizable = true
always_on_top = true
min_size = Vector2i(320, 320)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2
root_subfolder = "res://"
filters = PackedStringArray("*.mp3")

[node name="General Properties Label" type="Label" parent="UI"]
offset_left = 32.0
offset_top = 352.0
offset_right = 544.0
offset_bottom = 384.0
theme = ExtResource("2_a5udf")
text = "General Properties
"

[node name="Artist Container" type="PanelContainer" parent="UI"]
offset_left = 32.0
offset_top = 392.0
offset_right = 544.0
offset_bottom = 440.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Artist Container"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Artist Container/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LineEdit" type="LineEdit" parent="UI/Artist Container/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(496, 0)
layout_mode = 2
theme = ExtResource("2_a5udf")
placeholder_text = "Artist"

[node name="Song Title Container" type="PanelContainer" parent="UI"]
offset_left = 32.0
offset_top = 456.0
offset_right = 544.0
offset_bottom = 504.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Song Title Container"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Song Title Container/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LineEdit" type="LineEdit" parent="UI/Song Title Container/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(496, 0)
layout_mode = 2
theme = ExtResource("2_a5udf")
placeholder_text = "Song Title"

[node name="Difficulty Container" type="PanelContainer" parent="UI"]
offset_left = 32.0
offset_top = 520.0
offset_right = 544.0
offset_bottom = 568.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Difficulty Container"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Difficulty Container/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LineEdit" type="LineEdit" parent="UI/Difficulty Container/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(496, 0)
layout_mode = 2
theme = ExtResource("2_a5udf")
placeholder_text = "Difficulty"

[node name="Chart File Container" type="PanelContainer" parent="UI"]
anchors_preset = -1
anchor_right = 0.4
anchor_bottom = 0.089
offset_left = 744.0
offset_top = 200.0
offset_right = 744.0
offset_bottom = 183.92

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Chart File Container"]
layout_mode = 2
alignment = 1
metadata/_edit_lock_ = true

[node name="HFlowContainer" type="HFlowContainer" parent="UI/Chart File Container/VBoxContainer"]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="UI/Chart File Container/VBoxContainer/HFlowContainer"]
custom_minimum_size = Vector2(298, 0)
layout_mode = 2
theme = ExtResource("2_a5udf")
text = "Chart File: res://"
clip_text = true
text_overrun_behavior = 1
metadata/_edit_lock_ = true

[node name="Chart Location Button" type="Button" parent="UI/Chart File Container/VBoxContainer/HFlowContainer"]
layout_mode = 2
theme = ExtResource("2_a5udf")
text = "Select Folder"
metadata/_edit_lock_ = true

[node name="Save Chart Button2" type="Button" parent="UI/Chart File Container/VBoxContainer/HFlowContainer"]
layout_mode = 2
theme = ExtResource("2_a5udf")
text = "Save Chart"
metadata/_edit_lock_ = true

[node name="FileDialog" type="FileDialog" parent="UI/Chart File Container/VBoxContainer/HFlowContainer"]
title = "Open a Directory"
position = Vector2i(610, 221)
size = Vector2i(540, 400)
unresizable = true
always_on_top = true
min_size = Vector2i(320, 320)
ok_button_text = "Select Current Folder"
dialog_hide_on_ok = true
file_mode = 2
access = 2
root_subfolder = "res://"

[node name="Save Path" type="Label" parent="UI"]
offset_left = 744.0
offset_top = 160.0
offset_right = 1256.0
offset_bottom = 200.0
theme = ExtResource("2_a5udf")
text = "Hitting save will direct you to the editor."
metadata/_edit_lock_ = true

[node name="Pause Button" type="CheckButton" parent="UI"]
offset_left = 584.0
offset_top = 200.0
offset_right = 628.0
offset_bottom = 312.0
theme_override_icons/checked = ExtResource("3_7dle2")
theme_override_icons/unchecked = ExtResource("4_4kygd")
shortcut_in_tooltip = false

[node name="Line2d" type="Line2D" parent="UI/Pause Button"]
points = PackedVector2Array(-32, 24, 0, 24, 0, 88, -32, 88)
width = 5.0
default_color = Color(0, 0, 0, 0.47451)

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = 0
offset = Vector2(640, 360)
transform = Transform2D(1, 0, 0, 1, 640, 360)

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -2
motion_mirroring = Vector2(1280, 0)

[node name="Background" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color(0.439216, 0.439216, 0.72549, 1)
texture = ExtResource("5_p3k0j")
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground"]
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = -232.0
color = Color(0.0352941, 0.0352941, 0.0352941, 0.74902)
metadata/_edit_lock_ = true

[node name="ColorRect2" type="ColorRect" parent="ParallaxBackground"]
offset_left = -640.0
offset_top = 280.0
offset_right = 640.0
offset_bottom = 360.0
color = Color(0.0352941, 0.0352941, 0.0352941, 0.74902)
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="ParallaxBackground"]
offset_left = -632.0
offset_top = -352.0
offset_right = 632.0
offset_bottom = -240.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 7
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_outline_size = -7
theme_override_fonts/font = ExtResource("6_qek5h")
theme_override_font_sizes/font_size = 48
text = "CREATE CHART"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="UI/Vocals Container/VBoxContainer/HFlowContainer/Get File Button" to="." method="_on_get_file_button_pressed"]
[connection signal="file_selected" from="UI/Vocals Container/VBoxContainer/HFlowContainer/FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="pressed" from="UI/Instrumental Container/VBoxContainer/HFlowContainer/Get File Button" to="." method="_on_get_file_button_pressed2"]
[connection signal="file_selected" from="UI/Instrumental Container/VBoxContainer/HFlowContainer/FileDialog" to="." method="_on_file_dialog_file_selected2"]
[connection signal="pressed" from="UI/Chart File Container/VBoxContainer/HFlowContainer/Chart Location Button" to="." method="_on_save_chart_button_pressed"]
[connection signal="pressed" from="UI/Chart File Container/VBoxContainer/HFlowContainer/Save Chart Button2" to="." method="_on_save_chart_button_2_pressed"]
[connection signal="dir_selected" from="UI/Chart File Container/VBoxContainer/HFlowContainer/FileDialog" to="." method="_on_file_dialog_dir_selected"]
[connection signal="toggled" from="UI/Pause Button" to="." method="_on_pause_button_toggled"]
